@@ -1,3 +1,8 @@
+2008-04-17  Volker Reichelt  <v.reichelt@netcologne.de>
+
+	PR c/35436
+	* gcc.dg/format/gcc_gfc-2.c: New test.
+
 2008-04-17  Jason Merrill  <jason@redhat.com>
 
 	PR c++/35773
